fix: heading and window bar z-index clash

--- a/src/Window.css
+++ b/src/Window.css
@@ -66,6 +66,7 @@
   position: sticky;
   top: 0;
   text-align: center;
+  z-index: 2;
 }
 
 .window__bar:hover {
